[gd_scene load_steps=5 format=3 uid="uid://vxt7wu6vjao7"]

[ext_resource type="FontFile" uid="uid://c8fc2cp5fitkg" path="res://fonts/Bungee_Inline/BungeeInline-Regular.ttf" id="1_ds60e"]
[ext_resource type="Script" path="res://scripts/sign_panel.gd" id="1_hm5gi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhdyx"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.0980392)
shadow_size = 6
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dodsv"]
bg_color = Color(0.882353, 0.341176, 0.301961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SignPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_hm5gi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nhdyx")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 95.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dodsv")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("1_ds60e")
theme_override_font_sizes/font_size = 69
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickArea" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0

[connection signal="gui_input" from="ClickArea" to="." method="_on_click_area_gui_input"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
